--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
   },
   "homepage": "https://github.com/TheFienix/overworld#readme",
   "dependencies": {
+    "autoprefixer": "^9.1.1",
     "browser-sync": "^2.18.7",
     "del": "^2.2.2",
     "greensock": "^1.20.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
     "gulp-fingerprint": "^0.3.2",
@@ -63,7 +65,7 @@
     "metalsmith-word-count": "0.0.4",
     "metalsmith-writemetadata": "^0.4.5",
     "postcss": "^5.2.12",
-    "postcss-cssnext": "^2.9.0",
+    "postcss-preset-env": "^5.3.0",
     "precss": "^1.4.0",
     "purecss": "^1.0.0",
     "sharp": "^0.20.2",
